test/errors/traits/canonical_impl_conflict/main.sk
module Main {

struct Foo {

}

trait P[T] {
    fn bar(&self)
}

instance P[Foo] {
    fn bar(&self) {
    }
}

instance P[Foo] {
    fn bar(&self) {
    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}